[build-system]
requires = [
    'setuptools>=42',
    'pybind11>=2.12',
    'wheel',
]
# build-backend = "setuptools.build_meta"  ## "scikit_build_core.build"

[project]
name = "inertialsense"
version = "2.7.0"
description = 'Python interface to doing Inertial Sense things, like reading logs and doing mathy things.'
requires-python = '>=3.11'
authors = [ { name = 'Inertial Sense Development Team', email = 'devteam@inertialsense.com' }]
license = "MIT"
#license-files = { globs = ["LICENSE*"] } # Declares your license file

dependencies = [
    'allantools',
    'matplotlib',
    'numpy',
    'pandas',
    'pybind11>=2.12',
    'pyqt5',
    'pyserial',
    'scipy',
    'simplekml',
    'tqdm',
    'pyyaml'
]

[project.optional-dependencies]
dev = [ "pytest>=7.0", "twine>=4.0.2"]
