[metadata]
name = inertialsense
version = 2.1.10
author = Inertial Sense Development Team
author_email = devteam@inertialsense.com
description = Inertial Sense SDK
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/inertialsense/inertial-sense-sdk
project_urls = 
	Bug Tracker = https://github.com/inertialsense/inertial-sense-sdk/issues
classifiers = 
	Programming Language :: Python
	License :: OSI Approved :: MIT License
	Operating System :: OS Independent

[options]
package_dir = 
	= src
packages = find:
python_requires = >=3.8

[options.packages.find]
where = src

